Klasse "QuestFile" editiert.

--- a/QuestMaker/Data/Config/Config.ini
+++ b/QuestMaker/Data/Config/Config.ini
@@ -15,3 +15,6 @@ server_typ=php
 ;Server-Typ, z.B. PHP oder Java
 FirstRunFile=Data/Config/FirstRun.ini
 ;Pfad zur "FirstRun.ini"-Datei
+configFolder=Data/Config
+;Pfad zum Config-Ordner
+;In dem auch die Version.ini liegt.
