--- a/QuestMaker/Data/Config/build.ini
+++ b/QuestMaker/Data/Config/build.ini
@@ -4,6 +4,6 @@ build_path=Cache/build
 src_path=Cache/src
 run_command=java 
 createDataFile=1
-outputFile=Data/Saves
+outputFolder=Data/Saves
 compile_bat=1
 compile_bat_file=Cache/compile.bat
