--- a/QuestMaker/Data/Config/Config.ini
+++ b/QuestMaker/Data/Config/Config.ini
@@ -5,7 +5,7 @@ port=80
 ;Gib hier den Port an.
 
 [Config]
-cache=Data/Cache
+cache=Cache
 ;Gib hier den Cache-Ordner an.
 debug=0
 ;Gib hier den Debug-Modus an.
